--- a/Email-SMS.html
+++ b/Email-SMS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>MarTech Zone Blog - Email và SMS: Nên chọn phương thức tương tác nào với khách hàng?</title>
+    <title>Email và SMS: Nên chọn phương thức tương tác nào với khách hàng?</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="row no-gutters slider-text js-fullheight align-items-end justify-content-center">
           <div class="col-md-9 ftco-animate pb-5 text-center">
-            <h2 class="mb-3 bread">Email và SMS: Nên chọn phương thức tương tác nào với khách hàng?</h2>
+            <h1 class="mb-3 bread">Email và SMS: Nên chọn phương thức tương tác nào với khách hàng?</h1>
             <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span> <span class="mr-2"><a href="blog.html">Blog <i class="ion-ios-arrow-forward"></i></a></span> <span>Email và SMS: Nên chọn phương thức tương tác nào với khách hàng?<i class="ion-ios-arrow-forward"></i></span></p>
           </div>
         </div>
@@ -60,46 +60,46 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Email và SMS là các công cụ tương tác với người dùng được sử dụng rộng rãi nhất bởi gần như tất cả các doanh nghiệp. Đây là các công cụ không còn mới và có thể coi là đã ổn định về nền tảng nhưng vẫn còn rất nhiều điều hiểu chưa đúng về chúng và cách sử dụng.</p>
+            <p>Email và SMS là những công cụ tương tác người dùng được sử dụng rộng rãi nhất bởi hầu hết các doanh nghiệp. Đây là những công cụ không còn mới và có thể coi là ổn định trên nền tảng, tuy nhiên vẫn còn nhiều hiểu lầm về chúng cũng như cách sử dụng chúng.</p>
 
-<p>Ở mỗi một kênh, tương tác khách hàng đều có những điểm khác biệt, có những khách hàng khác nhau với những nhu cầu khác nhau, hành vi khác nhau. Tuy nhiên, trong bài viết này, chúng ta sẽ tập trung nói nhiều đến 2 kênh chính: Email, SMS và cách kết hợp 2 kênh lại với nhau để đem đến trải nghiệm người dùng tốt nhất.</p>
-<p>Trước tiên, có một số câu hỏi mà bạn cần xem xét:</p>
-<li>Tầm nhìn và mục tiêu kinh doanh của bạn là gì (ví dụ: khách hàng tiềm năng, khách hàng trung thành v.v…)?</li>
-<li>Những kênh nào bạn cảm thấy thoải mái và hiệu quả nhất trong việc sử dụng?</li>
-<li>ROI dự kiến ​​của bạn cho mỗi kênh là gì?</li>
-<li>Bạn dự định làm gì với những nhóm đối tượng có tương tác và không tương tác với kênh?</li>
-<p>Rõ ràng, khi nhìn vào những câu hỏi này, nếu trả lời được một cách đầy đủ thì nhiều số chúng ta cũng tự hiểu là cần phải kết hợp cân bằng giữa Email, SMS và việc kết hợp này sẽ cực kỳ dễ dàng.</p>
-<p><i>Mẹo: Tốt nhất, bạn nên tham khảo ý kiến khách hàng trước khi lựa chọn một kênh để giao tiếp với họ.</i></p>
+<p>Trong mỗi kênh, tương tác của khách hàng có những đặc điểm khác nhau, các khách hàng khác nhau có nhu cầu khác nhau và hành vi khác nhau. Tuy nhiên trong bài viết này sẽ tập trung vào 2 kênh chính là Email, SMS và cách kết hợp 2 kênh với nhau để mang lại trải nghiệm người dùng tốt nhất.</p>
+<p>Trước tiên, chúng ta cần trả lời được những câu hỏi dưới đây:</p>
+<li>Tầm nhìn và mục tiêu kinh doanh của công ty là gì? (Ví dụ: đối tượng khách hàng tiềm năng, khách hàng trung thành của công ty,...)</li>
+<li>Cảm thấy thoải mái và hiệu quả nhất khi sử dụng kênh nào?</li>
+<li>Tỷ lệ ROI dự kiến ​​cho mỗi kênh là gì?</li>
+<li>Với những nhóm đối tượng tương tác và không tương tác với kênh thì bạn dự định làm gì?</li>
+<p>Rõ ràng khi xem những câu hỏi này nếu được trả lời đầy đủ thì chúng ta cũng hiểu rằng cần kết hợp cân đối giữa Email, SMS và việc kết hợp này sẽ vô cùng dễ dàng.</p>
+<p><i>Lời khuyên: Tốt nhất, trước khi chọn kênh giao tiếp với khách hàng thì nên tham khảo ý kiến của họ.</i></p>
 
 <h2 class="mb-3 mt-5">Làm thế nào để chọn được kênh tốt nhất?</h2>
 
-<p>Để trả lời câu hỏi cốt lõi này, chúng ta cần trả lời câu hỏi: Thời điểm nào là tốt nhất để sử dụng Email, SMS?</p>
-<p>Tại một số doanh nghiệp MarTech được triển khai dưới dạng các tầng công nghệ khác nhau, trong đó các công cụ hoạt động song song, phối hợp cùng nhau thực hiện mục tiêu tiếp thị được đề ra một cách tự động. Dưới đây là một mô hình tầng công nghệ MarTech điển hình:</p>
+<p>Để trả lời câu hỏi quan trọng này, chúng ta cần trả lời được: Thời điểm nào tốt nhất để sử dụng Email và SMS?</p>
 <h3 class="mb-3 mt-5">Chức năng cơ bản của từng kênh</h3>
 <p class="mb-5">
               <img src="images/sms-va-email-800x420.jpg" alt="" class="img-fluid">
             </p>
             <p><b>E-mail</b></p>
-            <li>Cho phép tùy chỉnh nội dung, chèn hình ảnh để kích hoạt cảm xúc người nhận;</li>
-<li>Cho phép sử dụng các CTA mạnh mẽ thúc đẩy hành động;</li>
-<li>Cho phép đặt lịch, theo dõi và thống kê rõ ràng;</li>
+            <li>Cho phép chèn hình ảnh hoặc tùy chỉnh nội dung để kích thích cảm xúc của người nhận;</li>
+<li>Cho phép sử dụng các Call to action để thúc đẩy hành động;</li>
+<li>Cho phép theo dõi, đặt lịch và thống kê rõ ràng;</li>
 <p><b>SMS</b></p>
-<li>Tốt nhất để cung cấp thông tin, không tập trung cho tiếp thị</li>
-<li>Tiếp cận đúng lúc (Ngay lập tức) (nhưng phải lưu ý thời gian gửi, mũi giờ, thói quen sinh hoạt của người nhận)</li>
-<li>Lưu ý về loại tin nhắn MMS. Chi phí khá cao.</li>
+<li>SMS sử dụng mục đích chính là cung cấp thông tin, không cần quá tập trung cho tiếp thị;</li>
+<li>Tiếp cận đúng lúc, đúng thời điểm nhưng phải lưu ý thời gian gửi, múi giờ hay thói quen sinh hoạt của người nhận;</li>
+<li>Lưu ý về loại tin nhắn MMS vì có chi phí khá cao.</li>
 
             <h2 class="mb-3 mt-5">Khả năng theo dõi và đo lường của từng kênh</h2>
-            <p>Đa số chúng ta đều dành nhiều thời gian cho việc lập kế hoạch, nhưng điều quan trọng không kém là xem xét, đánh giá cụ thể những gì chúng ta đã làm, đang làm, xem cái gì tốt, cái gì không. Chúng ta cần phải liên tục theo dõi và đo lường để xem những gì hoạt động tốt, những gì không.</p>
+            <p>Hầu hết chúng ta đều dành nhiều thời gian cho việc lập kế hoạch, nhưng điều quan trọng không kém là xem xét và đánh giá cụ thể những gì chúng ta đã, đang làm và xem điều gì tốt, điều gì không. Chúng ta cần liên tục theo dõi và đo lường để xem cái gì hoạt động tốt, cái gì không.</p>
 
 <p><b>E-mail</b></p>
-<li>Theo dõi tỷ lệ mở và click</li>
-<li>Gắn thẻ và theo dõi email thông qua một nền tảng phân tích phổ biến nào đó (UTM)</li> 
-<li>Theo dõi kết quả từ chiến dịch email theo loại thiết bị</li>
-<li>Kiểm tra các biến thể khác nhau cho cùng một thông điệp (A/B Testing)</li>
-<li>Đối với email thương mại điện tử, hãy xem lợi nhuận doanh thu dựa trên mỗi nghìn email được gửi đi (Revenue/1000 email)</li>      <p><b>SMS</b></p>
-<li>Sử dụng một mã theo dõi duy nhất dành riêng cho SMS để theo dõi tỷ lệ chuyển đổi;</li>
-<li>Lợi nhuận/doanh thu dựa trên 1000 SMS gửi đi là bao nhiêu;</li> 
-<p>Không có một giải pháp đơn giản nào cho tất cả các khách hàng. Thay vào đó, đó là sự pha trộn giữa nghệ thuật và khoa học để tìm ra sự cân bằng hoàn hảo để đáp ứng các mục tiêu kinh doanh của doanh nghiệp. Thiết lập chiến lược đo lường và giám sát, tính đến các chuyển đổi cụ thể và luôn tôn trọng người dùng của bạn.</p>
+<li>Cần theo dõi tỷ lệ mở email và click</li>
+<li>Gắn thẻ và theo dõi email thông qua nền tảng phân tích nào đó (UTM)</li> 
+<li>Theo dõi kết quả từ chiến dịch email theo từng loại thiết bị</li>
+<li>Kiểm tra các kết quả khác nhau cho cùng một thông điệp (A/B Testing)</li>
+<li>Đối với loại email thương mại điện tử, hãy đo lường lợi nhuận doanh thu dựa trên mỗi nghìn email được gửi đi (Revenue/1000 email)</li>      
+<p><b>SMS</b></p>
+<li>Chỉ sử dụng một mã theo dõi dành riêng cho SMS để theo dõi tỷ lệ chuyển đổi;</li>
+<li>Đo lường lợi nhuận/doanh thu dựa trên 1000 SMS gửi đi;</li> 
+<p>Không có một giải pháp đơn giản hay cụ thể nào cho tất cả các khách hàng của bạn. Thay vào đó là sự pha trộn giữa nghệ thuật và khoa học để tìm ra sự cân bằng nhằm đáp ứng các mục tiêu kinh doanh của doanh nghiệp.  Hãy nhớ thiết lập chiến lược để đo lường và theo dõi, tính đến các chuyển đổi cụ thể và luôn tôn trọng người dùng của bạn.</p>
 <p><i>Nguồn tham khảo: https://www.martechtoday.vn/</i></p>      
               <div class="tag-widget post-tag-container mb-5 mt-5">
                <div class="tagcloud">
