--- a/Real-time-Marketing.html
+++ b/Real-time-Marketing.html
@@ -60,52 +60,51 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-            <p>Khách hàng luôn thích sự nhanh nhạy, những phản ứng thật lòng, và dễ bị kích thích để thể hiện ý kiến của mình trước những vấn đề “nóng”. Đó chính là lý do mà real-time marketing đã ra đời, giúp cho các thương hiệu có thể chinh phục trái tim mọi khách hàng.</p>
-<h2 class="mb-3 mt-5">Hiệu quả mà Real-time Marketing mang lại</h2>
+            <p>Khách hàng ngày nay rất thích sự nhanh nhạy và những phản ứng thật, dễ bị kích thích thể hiện ý kiến của mình trước những vấn đề “nóng”. Đó chính là lý do mà real-time marketing đã ra đời, nhờ đó các thương hiệu có thể chinh phục trái tim mọi khách hàng.</p>
+<h2 class="mb-3 mt-5">Real-time Marketing mang lại hiệu quả gì?</h2>
 
 
-<p>Trước khi nói về việc Real-time Marketing có thể mang đến hiệu quả thế nào, chúng ta hãy cùng tìm hiểu một số ví dụ khi áp dụng chiến lược này của các thương hiệu từ lớn đến nhỏ.</p>
+<p>Trước khi bàn đến việc Real-time Marketing mang lại hiệu quả thế nào, chúng ta hãy cùng tìm hiểu một số ví dụ khi áp dụng chiến lược Real-time Marketing của các thương hiệu từ lớn đến nhỏ.</p>
 <p class="mb-5">
               <img src="images/1.png" alt="" class="img-fluid">
             </p>
-            <p>Đầu tiên không thể không nhắc tới chiến lược tuy đơn giản nhưng mang đến tác dụng lan tỏa mà chính người tạo ra cũng phải bất ngờ của hãng bánh nổi tiếng Oreon. Vào thời điểm giải đấu bóng bầu dục Mỹ, Super Bowl, năm 2013 đang diễn ra gay cấn và được nhiều người bàn tán sôi nổi thì Oreon bất ngờ tung một bức ảnh lên Twitter với dòng chữ “You can still drunk in the dark” (Bạn vẫn có thể ghi bàn trong bóng tối). Chỉ sau đó vài giờ bức ảnh đã nhận được hàng ngàn lượt favourites và retweets của những người hâm mộ. Tốc độ lan tỏa trên mạng xã hội khiến thương hiệu của Oreon bỗng dưng “tỏa sáng” chỉ sau một đêm, hầu như khắp nước Mỹ đều biết đến họ.</p>
+            <p>Đầu tiên phải nhắc tới chiến lược đơn giản nhưng có sức lan tỏa mà chính người sáng tạo ra cũng phải bất ngờ của hãng bánh nổi tiếng Oreon. Vào thời điểm giải đấu Super Bowl của Mỹ năm 2013 đang diễn ra gay cấn và được rất nhiều người quan tâm, bàn tán thì Oreon bất ngờ đăng tải một bức ảnh lên Twitter với nội dung “You can still drunk in the dark” (Bạn vẫn có thể ghi bàn trong bóng tối). Chỉ sau vài tiếng đồng hồ, bức ảnh đã nhận được hàng ngàn lượt thích và chia sẻ của người hâm mộ. Tốc độ lan tỏa của bức ảnh trên mạng xã hội khiến thương hiệu của Oreon đột nhiên “tỏa sáng” chỉ sau một đêm, hầu hết nước Mỹ đều biết đến họ.</p>
 <h2 class="mb-3 mt-5">Real-time Marketing là gì?</h2>
-<p>Đừng nghĩ rằng khái niệm Real-time Marketing bắt đầu nổi lên từ VD của Oreo.</p>
-<p>Real-time marketing thực ra đã ra đời từ giữa những năm 1990, thời kỳ đầu của lĩnh vực quản trị quan hệ khách hàng. Nhiều công ty đã chuyển sang các quy trình thỏa mãn nhu cầu khách hàng linh hoạt hơn, từ đó phản ứng ngay lập tức, đưa ra các giải pháp nằm trong hoàn cảnh của những gì đang xảy ra.</p>
+<p>Đừng nghĩ rằng Real-time Marketing được nổi lên từ ví dụ của Oreo. Real-time marketing thực ra là đã ra đời từ giữa những năm 1990, đây là thời kỳ đầu của lĩnh vực quan hệ công chúng. Nhiều công ty đã thay đổi quy trình làm thỏa mãn nhu cầu khách hàng để trở nên linh hoạt hơn. Từ đó các công ty đã phản ứng ngay lập tức và đưa ra các giải pháp nằm trong hoàn cảnh của những gì đang diễn ra.</p>
 <p class="mb-5">
               <img src="images/2.gif" alt="" class="img-fluid">
             </p>
-<p>Với sự phát triển của Internet tốc độ cao và các trang mạng xã hội bây giờ, những tin tức được truyền tải sau một vài giây – thay vì một vài ngày, và Real-time marketing ngày càng trở nên thông dụng.</p>
+<p>Với sự phát triển của Internet hiện nay và các trang mạng xã hội bây giờ, những tin tức mới, nóng được truyền tải chỉ sau một vài giây – thay vì một vài ngày như trước kia. Real-time marketing đã ngày càng trở nên quen thuộc.</p>
 
-            <p>Khái niệm: Real-time marketing là hoạt động kết nối chiến lược của thương hiệu với những tin tức thời sự hoặc xu hướng nóng hổi, bằng cách truyền tải những thông điệp liên quan với cuộc sống cộng đồng của khách hàng mục tiêu, bạn đang mang đến những nội dung liên quan trực tiếp đến họ và khiến họ muốn chia sẻ.</p>
+            <p>Real-time marketing là hoạt động kết nối chiến lược của thương hiệu với những tin tức mới mang tính thời sự hoặc các hot trend. Bằng cách truyền tải những thông điệp liên quan đến đời sống của khách hàng mục tiêu, bạn đang đem đến những nội dung liên quan trực tiếp đến họ và khiến cho họ muốn chia sẻ.</p>
             
             <h2 class="mb-3 mt-5">Tại sao Real-time Marketing hiệu quả?</h2>
-            <p>Tại sao một bức ảnh bánh Oreo trong bóng tối lại mang về 16,000 retweets trong khi các chiến lược được chuẩn bị kỹ càng lại không có được phần trăm tương tác như vậy?</p>
-<p>Đây là vì mọi người nghĩ về các nỗ lực real-time marketing là thật lòng, liên quan và dễ tiếp cận. Khách hàng không thường chủ động tìm những mẫu quảng cáo đã được chuẩn bị từ mấy tuần trước nhằm thuyết phục họ mua hàng của bạn. Thay vào đó, họ thích sự nhanh nhạy, những phản ứng thật lòng, và cũng dễ bị kích thích để thể hiện ý kiến của mình trước những vấn đề “nóng”.</p>
-<p>Không chỉ mang lại tiếng tăm cho bạn, Real-time Marketing còn giúp bạn tăng ROI đáng kể. Bạn cần ít nguồn lực (thời gian, lao động…) hơn để xuất bản các tác phẩm real-time marketing, trong khi đó chúng lại mang lại lượng tương tác lớn hơn.</p>
-            <h2 class="mb-3 mt-5">Công thức cho một chiến dịch Real-time Marketing thành công</h2>
+            <p>Tại sao một bức ảnh bánh Oreo trong bóng tối lại có đến 16,000 lượt chia sẻ trong khi các chiến lược được chuẩn bị kỹ càng lại không có được sự tương tác lớn như vậy?</p>
+<p>Khách hàng thường sẽ không chủ động tìm các mẫu quảng cáo đã chuẩn bị từ mấy tuần trước để thuyết phục họ mua hàng của bạn. Thay vào đó, khách hàng thích sự nhanh nhạy, những phản ứng thật, dễ bị kích thích thể hiện ý kiến của mình trước những vấn đề “nóng”.</p>
+<p>Không chỉ mang lại hiệu quả về mặt thương hiệu, Real-time Marketing còn giúp tăng ROI một cách đáng kể. Bạn sẽ không mất quá nhiều nguồn lực (thời gian, lao động…) để sáng tạo ra các tác phẩm real-time marketing, trong khi đó chúng lại mang lại lượng tương tác của khách hàng lớn hơn.</p>
+            <h2 class="mb-3 mt-5">Công thức để một chiến dịch Real-time Marketing thành công</h2>
  <p class="mb-5">
               <img src="images/3.png" alt="" class="img-fluid">
             </p>  
 <p><b>Quy trình</b></p> 
-<p>Để phản ứng nhanh, bạn cần có một quy trình làm việc thật trôi chảy, ăn khớp. Các phòng ban và chức năng khác nhau phải có khả năng tích hợp, làm việc với nhau.</p>
-<p>Oreo có một đội gồm các vị trí chiến lược, marketing, và thậm chí là luật pháp làm việc cùng nhau để lưu thông các dòng chảy về thực thi, quyết định và kiểm duyệt.</p>  
+<p>Để có được phản ứng nhanh, bạn cần có một quy trình làm việc thật ăn khớp giữa các bộ phận. Các phòng ban khác nhau phải có khả năng làm việc với nhau tốt.</p>
+<p>Oreo đã có một đội ngũ bao gồm các vị trí chiến lược, marketing và thậm chí cả luật pháp làm việc cùng nhau để thực thi, quyết định và kiểm duyệt.</p>  
 <p><b>Thông tin</b></p> 
-<p>Hãy xây dựng một hệ thống thông tin nhằm theo dõi được những sự kiện đang xảy ra trong xã hội, những chủ đề “hot” đối với khách hàng mục tiêu, cũng như những cách triển khai nội dung phù hợp với họ.</p>  
+<p>Cần xây dựng một hệ thống thông tin để theo dõi những sự kiện đang xảy ra, những chủ đề hot trend đối với đối tượng mục tiêu, cũng như các cách triển khai nội dung phù hợp với họ.</p>  
    <p><b>Tài năng</b></p> 
-<p>Bạn không cần phải tìm những người thật giỏi, nhưng đội của bạn cũng phải đủ khả năng để nắm bắt đám đông, đưa ra các ý tưởng sáng tạo và thực hiện nó một cách thành công trong thời gian ngắn.</p>
+<p>Không nhất thiết phải tìm những người thật giỏi, nhưng team của bạn cũng phải có khả năng nắm bắt tâm lý đám đông. Từ đó đưa ra các ý tưởng sáng tạo và thực hiện thành công trong thời gian ngắn.</p>
 <p><b>Thời gian</b></p> 
-<p>Real-time marketing yêu cầu bạn phải căn thời gian thật chuẩn: đủ nhanh để thông điệp có vẻ ngẫu hứng, khi chủ đề còn “nóng” và thú vị.</p>
+<p>Real-time marketing yêu cầu phải căn thời gian thật chính xác: Phải kịp thời để thông điệp truyền tải có vẻ ngẫu hứng, đủ nhanh khi chủ đề còn “nóng” và thú vị.</p>
 <p class="mb-5">
               <img src="images/45.jpg" alt="" class="img-fluid">
             </p>  
 <p><b>May mắn</b></p> 
-<p>Do các chủ đề thời sự cần có được các phản ứng kịp thời, nhiều khi bạn cần may mắn để bắt được đúng chủ đề vừa phù hợp với thương hiệu mình vừa thu hút khách hàng mục tiêu, tìm được ý tưởng đủ nổi bật và kích thích tương tác, và thực hiện nó thành công.</p>
+<p>Các chủ đề hot trend cần có các phản ứng kịp thời, nhiều trường hợp bạn cần may mắn để tìm được đúng chủ vừa thu hút khách hàng mục tiêu vừa phù hợp với thương hiệu của mình. Hãy tìm ý tưởng đủ nổi bật và kích thích tương tác rồi thực hiện nó thành công.</p>
 <p><b>Kết</b></p> 
-<p>Real-time marketing không chỉ là 1 post trên Facebook hay 1 tweet trên Twitter, nó là cả một sự chuyển dịch của lĩnh vực marketing.</p>
-<p>Các marketers không còn dựa dẫm hoàn toàn vào những thủ tục rườm rà, những kế hoạch quá chặt chẽ và được chuẩn bị kỹ lưỡng sau hàng tháng trời làm việc. Việc hiểu biết nằm lòng khách hàng mục tiêu và thế giới của họ cần thiết hơn rất nhiều việc đầu tư cả đống thời gian, nguồn lực vào việc lập kế hoạch.</p>
-<p>Vậy, dù bạn là một công ty tư nhân mới lập, hay một thương hiệu đã gặt hái nhiều thành công, hãy hiện diện trong những thời khắc quan trọng của khách hàng mục tiêu, và cho họ thấy rằng bạn là một phần trong thế giới của họ.</p>
-<p><i>Tổng hợp</i></p>
+<p>Real-time marketing không chỉ đơn giản là 1 post trên Facebook, nó là cả một sự chuyển dịch trong ngành marketing.</p>
+<p>Những người làm marketing không nên dựa hoàn toàn vào những thủ tục rườm rà hay những kế hoạch quá cứng nhắc được chuẩn bị kỹ lưỡng sau nhiều tháng trời. Việc hiểu được tâm lý khách hàng mục tiêu và thế giới của họ cần thiết hơn rất nhiều việc đầu tư quá nhiều thời gian, nguồn lực vào việc lập kế hoạch.</p>
+<p>Vì vậy, cho dù bạn là một công ty tư nhân mới lập hay là một thương hiệu đã có chỗ đứng trên thị trường, hãy xuất hiện trong những thời khắc quan trọng của khách hàng mục tiêu và cho họ thấy rằng bạn là một phần trong thế giới của họ.</p>
+<p><i>Nguồn: Tổng hợp</i></p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
                <div class="tagcloud">
                   <a href="#" class="tag-cloud-link">MarTech</a>
